--- a/src/product.html
+++ b/src/product.html
@@ -1,223 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="/assets/logo.svg">
-  <link rel="stylesheet" href="styles.css">
-  <title>Product</title>
-</head>
-<body>
-  <div class="main-wrapper">
-    <header class="header">
-      <a href="/">
-        <img src="/assets/logo.svg" alt="Logo shoes company" class="logo">
-      </a>
-      <nav>
-        <ul class="menu display-flex">
-          <li><a href="#" class="menu--actived">Mujer</a></li>
-          <li><a href="categories.html">Hombre</a></li>
-          <li><a href="#">Niños</a></li>
-          <li><a href="#">Accesorios</a></li>
-          <li><a href="#">Outlet</a></li>
-          <li><a href="#">Huellas</a></li>
-          <li><a href="faq.html">F.A.Q</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main class="inner-container">
-      <nav class="breadcrumb">
-          <a href="index.html">Inicio</a>
-          <span> / </span>
-          <a href="#">Mujer</a>
-          <span> / </span>
-          <a href="#">Deportivos</a>
-          <span> / </span>
-          <a href="#" class="breadcrumb--actived">Vera W4L-6780</a>
-      </nav>
-      <article class="display-flex">
-        <section class="display-flex padding-y-2">
-          <ul class="product-info__thumbnails">
-            <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail"></li>
-            <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail"></li>
-            <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail"></li>
-            <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail"></li>
-            <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail"></li>
-            <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail product-info__thumbnail--actived"></li>
-            <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail"></li>
-          </ul>
-          <div class="product-img__wrapper">
-            <div class="position-relative margin-1">
-              <img src="assets/shoes06.jpg" alt="" class="product-img">
-              <p class="new-product-tag">new</p>
-              <p class="light-product-tag">light</p>
-            </div>
-            <span class="product-img__chevron-l"></span>
-            <span class="product-img__chevron-r"></span>
-          </div>
-        </section>
-        <section class="padding-x-2">
-          <div class="product-info">
-            <h1 class="product-info__title">Vera W4L</h1>
-            <sub>W4L-6780</sub>
-            <p class="product-info__price">89,95€</p>
-            <p>Color : <span class="uppercase">sappire</span></p>
-            <ul class="product-info__thumbnails display-flex">
-              <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail"></li>
-              <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail"></li>
-              <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail"></li>
-              <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail"></li>
-              <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail"></li>
-              <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail product-info__thumbnail--actived"></li>
-              <li><img src="assets/shoes06.jpg" alt="" class="product-info__thumbnail"></li>
-            </ul>
-            <a href="#" class="product-info__link bold-text">Envios y devoluciones gratis*</a>
-          </div>
-          <div class="product-size">
-            <div flex-between class="padding-bottom-y-1">
-              <p>Seleccione una talla</p>
-              <a href="#" class="product-info__link">Guía de tallas</a>
-            </div>
-            <ul class="display-flex">
-              <li class="product-size__item">35</li>
-              <li class="product-size__item">36</li>
-              <li class="product-size__item">37</li>
-              <li class="product-size__item">38</li>
-              <li class="product-size__item">39</li>
-              <li class="product-size__item">40</li>
-              <li class="product-size__item">41</li>
-              <li class="product-size__item">42</li>
-            </ul>
-          </div>
-          <button class="product__button">comprar</button>
-          <div>
-            <p class="product-size">Dale a tu look un toque diferente con este calzado sport con detalles y cordones originales al estilo casual</p>
-            <h2 class="product-info-detail__title product-info-detail__title--actived">Características técnicas</h2>
-            <div class="product-properties">
-              <p class="product-properties__tile01 display-flex flex-start flex-align-center">Corte: 100% piel vacuno</p>
-              <p class="product-properties__tile02 display-flex flex-start flex-align-center">Forro interior: 75% piel 25% textil</p>
-              <p class="product-properties__tile03 display-flex flex-start flex-align-center">Suela 100% sintetica</p>
-            </div>
-            <h2 class="product-info-detail__title">Envío y devoluciones</h2>
-            <h2 class="product-info-detail__title">¿Necesitas más información?</h2>
-          </div>
-          <div class="display-flex flex-justify-center">
-            <a href="#"><img src="/assets/icons/icon-facebook-red.svg" alt="Facebook logo" class="social-img"></a>
-            <a href="#"><img src="/assets/icons/icon-instagram-red.svg" alt="Instagram logo" class="social-img"></a>
-            <a href="#"><img src="/assets/icons/icon-pinterest-red.svg" alt="TPinterest logo" class="social-img"></a>
-          </div>
-        </section>
-      </article>
-      <article class="product-related">
-        <section class="position-relative">
-          <img src="assets/shoes32.jpg" alt="">
-          <p class="new-product-tag">new</p>
-          <p>Merida W4F</p>
-          <p class="bold-text">89,95 €</p>
-          <p class="product-select-color">+ Colores</p>
-        </section>
-        <section class="position-relative">
-          <img src="assets/shoes31.jpg" alt="">
-          <p class="new-product-tag">new</p>
-          <p>Santander W7C</p>
-          <p class="bold-text">119,95 €</p>
-          <p class="product-select-color">+ Colores</p>
-        </section>
-        <section class="position-relative">
-          <img src="assets/shoes30.jpg" alt="">
-          <p class="new-product-tag">new</p>
-          <p>Huelma W2Z</p>
-          <p class="bold-text">129,95 €</p>
-          <p class="product-select-color">+ Colores</p>
-        </section>
-        <section class="position-relative">
-          <img src="assets/shoes29.jpg" alt="">
-          <p class="new-product-tag">new</p>
-          <p>Lagos 901</p>
-          <p class="bold-text">99,95 €</p>
-          <p class="product-select-color">+ Colores</p>
-        </section>
-      </article>
-    </main>
-
-    <footer>
-      <article class="main-footer">
-        <section class="footer-section">
-          <ul>
-            <li><a href="#" class="list-title">Sobre</a></li>
-            <li><a href="#">Universo</a></li>
-            <li><a href="#">Huellas</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Fabricación</a></li>
-          </ul>
-          <ul>
-            <li><a href="#" class="list-title">Guía de compra</a></li>
-            <li><a href="#">Ventajas</a></li>
-            <li><a href="#">Cómo hacer un pedido</a></li>
-            <li><a href="#">Cambios y devoluciones</a></li>
-            <li><a href="#">Guía de tallas</a></li>
-            <li><a href="#">FAQ's</a></li>
-          </ul>
-        </section>
-        <section class="footer-section">
-          <ul>
-            <li><a href="#" class="list-title">Políticas</a></li>
-            <li><a href="#">Condiciones generales</a></li>
-            <li><a href="#">Política de privacidad</a></li>
-            <li><a href="#">Política de cookies</a></li>
-            <li><a href="#">Condiciones generales de compra</a></li>
-            <li><a href="#">RSC</a></li>
-            <li><a href="#">Ahorro y eficiencia energética</a></li>
-            <li><a href="#">Ahorro y eficiencia energética en la industria</a></li>
-            <li><a href="#">Proyectos I+D</a></li>
-          </ul>
-          <ul>
-            <li><a href="#" class="list-title">Contacto</a></li>
-            <li><a href="#">Atención al cliente</a></li>
-            <li><a href="#">Trabaja con nosotros</a></li>
-            <li><a href="#">Devolución de pedido</a></li>
-          </ul>
-        </section>
-        <section class="flex-column-between">
-          <div class="footer-section">
-            <ul>
-              <li>
-                <a href="#">
-                  <p>¿Te ayudamos?</p>
-                  <p>&#x2706; 900 858 989</p>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <p>Selector de país</p>
-                  <p>&#127758; España | ES</p>
-                </a>
-              </li>
-            </ul>
-
-            <ul class="italic-text">
-              <li>
-                <div class="display-flex">
-                  <a href="#"><img src="/assets/icons/icon-facebook.svg" alt="Facebook logo" class="social-img"></a>
-                  <a href="#"><img src="/assets/icons/icon-instagram.svg" alt="Instagram logo" class="social-img"></a>
-                  <a href="#"><img src="/assets/icons/icon-twitter.svg" alt="Twitter logo" class="social-img"></a>
-                  <a href="#"><img src="/assets/icons/icon-pinterest.svg" alt="Pinterest logo" class="social-img"></a>
-                </div>
-              </li>
-              <li><a href="#">Valoracion clientes:</a></li>
-              <li><a href="#">4.8 / 5</a></li>
-              <li><a href="#">&#x2605; &#x2605; &#x2605; &#x2605; &#x2605;</a></li>
-              <li><a href="#">1145 opiniones</a></li>
-            </ul>
-          </div>
-          <p>©Nosotros, 2019 - Todos los derechos reservados</p>
-        </section>
-      </article>
-    </footer>
-
-    </div>
-  </body>
-  </html>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="icon" href="/assets/logo.svg" />
+		<link rel="stylesheet" href="./css/main.css" />
+		<title>Product</title>
+	</head>
+	<body></body>
+</html>
