--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600;700&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="icon" href="assets/img/logo.svg" />
-		<link rel="stylesheet" href="./css/main.css" />
-		<title>Home</title>
-	</head>
-	<body></body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="assets/img/logo.svg" />
+    <link rel="stylesheet" href="../src/assets/scss/base/index.css" />
+    <title>Home</title>
+  </head>
+  <body>
+    <header class="header__content">
+      <img class="header__content-icon" src="assets/img/logo.svg" />
+      <ul class="menu">
+        <li class="home"><a href="./index.html">Mujer</a></li>
+        <li class="home"><a href="./index.html">Hombre</a></li>
+        <li class="home"><a href="./index.html">Niños</a></li>
+        <li class="home"><a href="./index.html">Accesorios</a></li>
+        <li class="home"><a href="./index.html">Outlet</a></li>
+        <li class="home"><a href="./index.html">Huellas</a></li>
+        <li class="home"><a href="./index.html">FAQ</a></li>
+      </ul>
+    </header>
+    <main></main>
+    <footer class=""></footer>
+  </body>
 </html>
